# sparkdown

./: .gitignore  CHANGELOG.md  COMPAT_GATE_FINDINGS.md  Cargo.toml  LICENSE  README.md  SPIKE_FINDINGS.md
.github/workflows/: ci.yml  codspeed.yml  release-npm.yml
benches/: ast_tax.rs  feature_tax.rs  vs_pulldown.rs
examples/: mdast_json.rs
harness/: .gitignore  README.md  builtin_heading_ids.mjs  byte_identity.mjs  cd2.mjs  e2e_bench.mjs  e2e_transform.mjs  focused_c.mjs  fused_stringify.mjs  gate.mjs  gate2_diag.mjs  gate_definition_lists.mjs  gate_directives.mjs  gate_emoji.mjs  gate_external_links.mjs  gate_footnotes.mjs  gate_frontmatter.mjs  gate_harness.mjs  lint_demo.mjs  mdast_npm_verify.mjs  nopos_bench.mjs  nopos_fasttest.mjs  nopos_pooltest.mjs  nopos_profile.mjs  nopos_strtest.mjs  nopos_u32test.mjs  package-lock.json  package.json  perf_definition_lists.mjs  perf_directives.mjs  perf_emoji.mjs  perf_external_links.mjs  perf_footnotes.mjs  perf_frontmatter.mjs  perf_harness.mjs  plugin_demo.mjs  prof_loop.mjs  sparkdown.mjs  time_harness.mjs  usage_demo.mjs  (+6 more)
harness/findings/: COMPAT_GATE_FINDINGS.md  HARNESS_FINDINGS.md  INTEGRATION_FINDINGS.md  PLUGIN_FINDINGS.md  POSITION_FINDINGS.md  README.md  WASM_BOUNDARY_FINDINGS.md
npm/: .gitignore  README.md  build.mjs  full.d.ts  full.mjs  gfm.mjs  index.d.ts  mdast.d.ts  mdast.mjs  package.json  sparkdown.mjs  sparkdown.opt.wasm  test.mjs  wasm-inline.mjs
npm-gfm/: .gitignore  README.md  build.mjs  index.d.ts  package.json  sparkdown.mjs  sparkdown.opt.wasm  test.mjs  wasm-inline.mjs
src/: arena.rs  ast.rs  block.rs  bump.rs  directive.rs  entities.rs  inline.rs  lib.rs  options.rs  render.rs  scan.rs  wasm.rs
src/ext/: diagram.rs  emoji.rs  emoji_data.rs  mod.rs
tests/: extensions.rs  options.rs  spec.rs
