[package]
name = "sparkdown"
description = "Fast, zero-dependency CommonMark 0.31.2 parser — 100% conformant and byte-identical to cmark, with opt-in GFM extensions (the `gfm` feature)."
version = "0.0.4"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/momiji-rs/sparkdown"
keywords = ["markdown", "commonmark", "gfm", "html", "parser"]
categories = ["text-processing", "parser-implementations"]
authors = ["rubyrs contributors"]

# `rlib` for normal Rust dependents; `cdylib` so `--features wasm` emits a
# loadable `.wasm` on `wasm32-unknown-unknown`.
[lib]
crate-type = ["cdylib", "rlib"]

# Empty [workspace] table: makes sparkdown its own workspace root so Cargo
# does not attach it to the parent rostdown package during stage-1
# scaffolding (this crate currently lives on a branch inside the rostdown
# repo). Drop this when sparkdown moves into a real `momiji` workspace.
[workspace]

[features]
# GFM extensions (opt-in, OFF by default): strikethrough, task lists, extended
# autolinks, tag filter, and pipe tables. Off, none of this code is compiled —
# the parser is byte-for-byte the pure-CommonMark fast path.
gfm = []
# Diagram extension (opt-in, OFF by default): a fenced code block tagged with a
# client-side diagram language (currently `mermaid`) renders as a bare wrapper
# element (`<pre class="mermaid">`) for a browser library to pick up, instead of
# `<pre><code>`. Render-only, zero-dependency. The template for `src/ext/*`.
diagram = []
# Mirrors rostdown: opt-in scoped global bump allocator (src/arena.rs). An
# embedder that enables it must install `sparkdown::ScopedAlloc` as its
# `#[global_allocator]`. The local bump (src/bump.rs) is always on.
arena = []
# Exposes profile_phases() for benchmarks (parse-vs-render split). Diagnostic.
profiling = []
# WASI-free WebAssembly interface: raw C-ABI exports (src/wasm.rs) for
# `wasm32-unknown-unknown`. Zero dependencies — drives from any wasm host.
wasm = []

[dependencies]

[dev-dependencies]
serde_json = "1"
pulldown-cmark = "0.13"
criterion = { version = "5.0.0", package = "codspeed-criterion-compat" }

[[bench]]
name = "vs_pulldown"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
